k8s/session15/ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  rules:
    - host: foo.bar.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: service1
                port:
                  number: 80
    - host: bar.foo.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: service2
                port:
                  number: 80
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: service3
                port:
                  number: 80
          - pathType: Prefix
            path: "/blog"
            backend:
              service:
                name: service4
                port:
                  number: 80
